# advent-of-code

./: .gitignore
2015/: Cargo.toml
2015/day-1/: Floors.hs
2015/day-12/: main.rs
2015/day-16/: main.rs
2015/day-17/: main.rs
2015/day-2/: Wrapping.hs
2015/day-21/: main.rs
2015/day-22/: main.rs
2015/day-25/: main.rs
2015/day-3/: Houses.hs
2015/day-4/: Coin.hs
2015/day-5/: Nice.hs
2015/day-9/: main.rs
2016/: Cargo.toml
2019/day-13/: Main.hs
2019/day-16/: Main2.hs
2019/day-18/: Maze.hs
2019/day-20/: Maze.hs
2019/day-21/: SpringDroid.hs  program-part1.txt  program-part2.txt
2019/day-22/: Deal.hs
2019/day-24/: Bugs2.hs
2019/day-4/: Password1.hs
2019/day-5/: IntCode2.hs
2019/day-7/: Amp.hs
2020/day-10/: Joltage.hs
2020/day-11/: Seating.hs
2020/day-13/: Day13.hs
2020/day-14/: Day14.hs
2020/day-15/: Day15.hs
2020/day-16/: Day16.hs
2020/day-17/: Day17.hs
2020/day-18/: Day18.hs
2020/day-19/: Message.hs
2020/day-20/: Tiles.hs
2020/day-22/: Combat.hs
2020/day-23/: Crab.hs
2020/day-24/: Tiles.hs
2020/day-25/: Code.hs
2020/day-3/: SlopeTweet.hs
2020/day-4/: Passport.hs
2020/day-8/: Console.hs
2020/day-9/: XMAS.hs
advent-of-code/: stack.yaml
advent-of-code/day-1/: Fuel.hs  Fuel2.hs
advent-of-code/day-10/: Asteroid.hs
advent-of-code/day-12/: Moon.hs
advent-of-code/day-14/: Fuel.hs
advent-of-code/day-15/: Main.hs
advent-of-code/day-16/: Main.hs  Main4.hs
advent-of-code/day-17/: Main.hs  Main2.hs  input2
advent-of-code/day-2/: IntCode.hs  IntCode2.hs
haskell/: 16.hs
java/: pom.xml
(+237 files in other folders)
