[package]
name = "advent-of-code-2015"
version = "0.1.0"
authors = ["Chris Mears <chris@cmears.id.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"

[[bin]]
name = "day-7"
path = "day-7/main.rs"
[[bin]]
name = "day-8"
path = "day-8/main.rs"
[[bin]]
name = "day-9"
path = "day-9/main.rs"
[[bin]]
name = "day-10"
path = "day-10/main.rs"
[[bin]]
name = "day-11"
path = "day-11/main.rs"

